fixed modal close button z-index, member highlight alignment, homepage section height, and hero display on wide monitors.

--- a/src/components/MediaManagement/_MediaManagement.scss
+++ b/src/components/MediaManagement/_MediaManagement.scss
@@ -7,9 +7,5 @@
   .close-button {
     all: initial;
     margin: 10px 10px;
-
-    &:hover,
-    &:focus {
-    }
   }
 }
