--- a/src/components/partials/_Modal.scss
+++ b/src/components/partials/_Modal.scss
@@ -17,6 +17,7 @@
     top: 10px;
     right: 10px;
     margin: 10px;
+    z-index: 1000;
   }
 
   i {
